fix: fix gap for error messages

--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -47,13 +47,13 @@
 }
 
 .card__btn {
-  margin-left: 0.5rem;
   min-width: 131px;
+  margin-top: 10px;
   text-align: center;
   border-radius: 5px;
   padding: 12px auto;
   border: 0;
-  height: 30px;
+  height: 2rem;
   transition: all 0.3s;
   color: rgb(255, 255, 255);
   background-color: rgba(0, 165, 91, 0.7725490196);
