--- a/src/components/checkInput/style.scss
+++ b/src/components/checkInput/style.scss
@@ -18,11 +18,3 @@
     border: 1px solid #d00e0e;
   }
 }
-
-.input__error-message {
-  color: #d00e0e;
-  font-size: 0.8rem;
-  left: 35px;
-  // position: absolute;
-  text-shadow: 1px 1px 0 #fff;
-}
