--- a/src/components/registrationForm/style.scss
+++ b/src/components/registrationForm/style.scss
@@ -10,4 +10,5 @@
   text-align: center;
   right: 0;
   color: rgb(102, 47, 255);
+  font-weight: bold;
 }
